# bluebear

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README.md  bluebear.cpp  bp2cm.h  cm2bp.h  cmake_install.cmake  cmd_vcf_ibs0_flanking.cpp  cmd_vcf_ibs0_pairwise.cpp  cmd_vcf_ibs0_view.cpp  compact_matrix.h  config.status  configure  configure.ac  core  cramore.h  ibs0_phase.cpp  pbwt_build.h  pbwt_prefix.cpp  pbwt_suffix.cpp  utils.h
.deps/: Error.Po  bcf_chunked_reader.Po  bcf_ordered_reader.Po  bcf_ordered_writer.Po  bluebear.Po  cmd_vcf_ibs0_baseline.Po  cmd_vcf_ibs0_flanking.Po  cmd_vcf_ibs0_pairwise.Po  cmd_vcf_ibs0_unconditional.Po  cmd_vcf_ibs0_view.Po  cmd_vcf_raresharing.Po  commands.Po  compact_matrix.Po  filter.Po  genome_interval.Po  hts_utils.Po  ibs0_phase.Po  interval.Po  interval_tree.Po  params.Po  pbwt_build.Po  pbwt_prefix.Po  pbwt_suffix.Po  utils.Po
src/: Makefile  bcf_filter_arg.h  bcf_ordered_reader.h  bcf_ordered_writer.cpp  binary_variant_compress.cpp  binary_variant_compress.h  blocks_in_ibs0_info.cpp  bluebear.cpp  bp2cm.cpp  bp2cm.h  byte_operation.cpp  byte_operation.h  cmake_install.cmake  cmd_fa_cpg.cpp  cmd_ibs0_add_control.cpp  cmd_tsv_annotate_context.cpp  cmd_vcf_anno_haplo_group.cpp  cmd_vcf_annotate_context.cpp  cmd_vcf_annotate_ibd.cpp  cmd_vcf_annotate_ibd_small.cpp  cmd_vcf_annotate_ibs0.cpp  cmd_vcf_annotate_ibs0_small_n.cpp  cmd_vcf_cap_gl.cpp  cmd_vcf_collapse_variant.cpp  cmd_vcf_dprime.cpp  cmd_vcf_ibs0_baseline.cpp  cmd_vcf_ibs0_flanking.cpp  cmd_vcf_ibs0_pairwise.cpp  cmd_vcf_ibs0_short.cpp  cmd_vcf_ibs0_triallelic.cpp  cmd_vcf_ibs0_unconditional.cpp  cmd_vcf_info_cdf.cpp  cmd_vcf_insert_pm.cpp  cmd_vcf_md.cpp  cmd_vcf_phase_outlier.cpp  cmd_vcf_rare_allele_carrier.cpp  cmd_vcf_raresharing.cpp  cmd_vcf_sample_summary.cpp  cmd_vcf_sample_summary_window.cpp  cmd_vcf_sfs.cpp  (+61 more)
src/ibs0/: cmd_vcf_ibs0_approx_pm.cpp  ibs0_between_group_control.cpp  ibs0_pairwise.cpp  ibs0_phase_forward.cpp  ibs0_rare_phase_forward.cpp  ibs0_short.cpp  ibs0_triallelic.cpp  ibs0_view.cpp
src/zz/: CMakeList.txt  cmd_vcf_collapse_variant.cpp  zz_cmd_vcf_site_annotate_age.cpp
test/: annotate_ibs0_small_n.txt  log
